# uma-auth-cli

./: .gitignore  Pipfile  README.md  setup.cfg
cli/: cli.py
