[metadata]
name = uma-auth-cli
url = https://docs.uma.me/
version = 0.2.1
description = UMA Auth CLI tool for Client Apps.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lightspark Group, Inc.
author_email = info@lightspark.com
license = Apache-2.0
license_files = LICENSE
project_urls =
  Documentation = https://github.com/uma-universal-money-address/uma-auth-cli/blob/main/README.md
  Source Code = https://github.com/uma-universal-money-address/uma-auth-cli

[options]
install_requires =
  typer
  nostr-sdk
include_package_data = True
setup_requires = setuptools
packages = find_namespace:

[options.entry_points]
console_scripts =
  uma-auth-cli = cli.cli:app
